--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 12.1.4 for binding GitHub repository
+An example project showing how to use Java8 lambda expressions and functional interfaces. It also includes a comparison to Scala.
